--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+appdirs==1.4.4
 argon2-cffi==20.1.0
 async-generator==1.10
 attrs==20.3.0
@@ -9,7 +10,9 @@ colorama==0.4.4
 cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
+distlib==0.3.1
 entrypoints==0.3
+filelock==3.0.12
 ipykernel==5.4.3
 ipython==7.20.0
 ipython-genutils==0.2.0
@@ -65,6 +68,7 @@ testpath==0.4.4
 threadpoolctl==2.1.0
 tornado==6.1
 traitlets==5.0.5
+virtualenv==20.4.2
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
